added to plan and added content to links page

--- a/plan.html
+++ b/plan.html
@@ -15,13 +15,13 @@
 <p><strong>Name: Graeme Broomhall</strong> ...<br>
 <strong>Login: jc258876</strong> ...</p>
 <h2>Goals</h2>
-<p>...</p>
+<p>CossiePlay website is designed for cosplayers of high school age to be interested in coming together with older people and having fun at cosplay events so it can be more of an all ages event and increase from current numbers. It is also to provide services of making costumes for people if they so prefer to instead of themselves.</p>
 <h2>Success Evaluation</h2>
-<p> ...</p>
+<p> Success evaluation of the site will be measured by the amount of people that have signed up via the website. Also by the numbers that will turn up at the events that are planned. These will be compared to the event numbers before the making of the website to see if their is a correlation between the success of having the website vs not having it.</p>
 <h2>Target Audience</h2>
 <p>...</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
-<p><img src="" alt="Site Flowchart"> ... </p>
+<p><img src="" alt="Site Flowchart"> </p>
 <h2>GitHub Repository</h2>
 <p><a href="http://github.com/broomy169">CP1406 - Assignment 1</a></p>
 </body>
