--- a/links.html
+++ b/links.html
@@ -8,6 +8,7 @@
         <li><a href="guidelines.html">Guidelines</a></li>
         <li><a href="announcements.html">Announcements</a></li>
         <li><a href="signup.html">Sign Up</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li><a href="links.html">Links</a></li>
     </ul>
     </div>
