--- a/links.html
+++ b/links.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title>Home - CossiePlay</title>
+    <title>Links - CossiePlay</title>
     <div id="menu">
     <ul>
         <li><a href="index.html">Home</a></li>
