--- a/links.html
+++ b/links.html
@@ -4,7 +4,8 @@
     <div id="menu">
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="whatis.html">What is Cosplay?</a></li>
+        <li><a href="about.html">About CossiePlay</a></li>
         <li><a href="guidelines.html">Guidelines</a></li>
         <li><a href="announcements.html">Announcements</a></li>
         <li><a href="signup.html">Sign Up</a></li>
