--- a/plan.html
+++ b/plan.html
@@ -23,6 +23,6 @@
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="" alt="Site Flowchart"> </p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/broomy169">CP1406 - Assignment 1</a></p>
+<p><a href="https://github.com/broomy169/CP1406---Assignment-1">CP1406 - Assignment 1</a></p>
 </body>
 </html>
