added images into pages, fixed up more css

--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,19 @@
     <body>
         <h1>Contact</h1>
         
-        <p><b>Phone:</b> 07 4771 1234</p>
-        <p><b>Fax:</b> 07 4771 1235</p>
-        <p><b>Address:</b> 4 Stanton Avenue, Hulkstwon</p>
-        <p><b>Email:</b> cossieplay@gmail.com</p>
+        <table>
+            <tr>
+                <td><b>Phone:</b> 07 4771 1234</td>
+            </tr>
+            <tr>
+                <td><b>Fax:</b> 07 4771 1235</td>
+            </tr>
+            <tr>
+                <td><b>Address:</b> 4 Stanton Avenue, Hulkstwon</td>
+            </tr>
+            <tr>
+                <td><b>Email:</b> cossieplay@gmail.com</td>
+            </tr>
+        </table>        
     </body>
 </html> 
