--- a/guidelines.html
+++ b/guidelines.html
@@ -20,5 +20,6 @@
         <p>CossiePlay party-goers party at their own risk and are responsible for their own safety. Check with your doctor before you party hard.</p>
         <p>Party fees must be paid at the door. Cash or EFTPOS accepted. Credit card payments attract a 2% surcharge.</p>
         <p>Alcohol is served at the bar to over 18s only. No intoxicated persons will be served, but will be escorted to a taxi – paid by the party-goer.</p>
+        <img src="party-1506740-640x480.jpg" id="party">
     </body>
 </html> 
