--- a/signup.html
+++ b/signup.html
@@ -17,14 +17,23 @@
     </head>
     <body>
         <h1>Sign Up</h1>
-        <p>Fill your details to register interest in the next upcoming event:</p>
         <form>
-            <p>Contact Name:<br>
-                <input type="text" name="contactName"></p>
-            <p>Phone:<br>
-                <input type="text" name="phoneNumber"></p>
-            <p>Number of people attending:<br>
-                <input type="number" name="poepleAttending"></p>
+        <p>Fill your details to register interest in the next upcoming event:</p>      
+            <table>
+                <tr>
+                    <td>Contact Name:</td>
+                    <td><input type="text" name="contactName"></td>
+                </tr>
+                <tr>
+                    <td>Phone:</td>
+                    <td><input type="text" name="phoneNumber"></td>
+                </tr>
+                <tr>
+                    <td>Number of people attending:</td>
+                    <td><input type="number" name="poepleAttending"></td>
+                </tr>
+            
+            </table>
             <p><input type="submit" value="Submit"></p>
         </form>
     </body>
