--- a/whatis.html
+++ b/whatis.html
@@ -18,6 +18,8 @@
     <body>
         <h1>What is Cosplay?</h1>
         <p>Cosplay, a portmanteau of the words costume play, is a performance art in which participants called cosplayers wear costumes and fashion accessories to represent a specific character. Cosplayers often interact to create a subculture and a broader use of the term "cosplay" applies to any costumed role-playing in venues apart from the stage. Any entity that lends itself to dramatic interpretation may be taken up as a subject and it is not unusual to see genders switched. Favorite sources include manga and anime, comic books and cartoons, video games, and live-action films and television series.</p>
+        <img src="alice-in-wonderland-872612_1280.jpg" id="alice">
+        <img src="spiderman-in-nature-2-1258899-640x480.jpg" id="spiderman">
         <p>The rapid growth in the number of people cosplaying as a hobby since 1990 has made the phenomenon a significant aspect of popular culture in Japan and some other parts of Asia and in the Western world. Cosplay events are common features of fan conventions and there are also dedicated conventions and local and international competitions, as well as social networks, websites and other forms of media centered on cosplay activities.</p>
     </body>
 </html> 
