swapped pics and made index page

--- a/announcements.html
+++ b/announcements.html
@@ -25,6 +25,8 @@
             <li>If you get a costume custom made, your next party entry is free if you wear that costume.</li>
             <li>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay!</li>
         </div>
+        <br>
+        <img src="we-re-rabbits-1439192-1279x850.jpg" id="rabbits">
         
     </body>
 </html> 
