--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Welcome to CossiePlay</h1>
+        <div id="indexImages">
+            <img src="olaf-630522_1280.jpg" id="olaf">
+            <img src="boromir-4-1478698.jpg" id="boromir">
+        </div>
         
+        <p id="index">With creating events for Cosplayers locally since 2012, let us help you with your costume design and bring you together with other fellow Cosplayers. </p>
     </body>
 </html> 
