added a pic to sign up page

--- a/signup.html
+++ b/signup.html
@@ -36,5 +36,6 @@
             </table>
             <p><input type="submit" value="Submit"></p>
         </form>
+        <img src="devils-570861_1280.jpg" id="devil">
     </body>
 </html> 
