--- a/announcements.html
+++ b/announcements.html
@@ -20,10 +20,10 @@
         
         <div id="announcements">
             <p>We have some cool things happening that we want people to know about:</p>
-            <li>This month you can purchase 3 drinks for the price of 2 at the bar</li>
-            <li>First-time party-goers get a 50% discount on entry</li>
-            <li>If you get a costume custom made, your next party entry is free if you wear that costume.</li>
-            <li>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay!</li>
+            <p>This month you can purchase 3 drinks for the price of 2 at the bar</p>
+            <p>First-time party-goers get a 50% discount on entry</p>
+            <p>If you get a costume custom made, your next party entry is free if you wear that costume.</p>
+            <p>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay!</p>
         </div>
         <br>
         <img src="we-re-rabbits-1439192-1279x850.jpg" id="rabbits">
