added site flowchart, started in target audience

--- a/plan.html
+++ b/plan.html
@@ -19,9 +19,9 @@
 <h2>Success Evaluation</h2>
 <p> Success evaluation of the site will be measured by the amount of people that have signed up via the website. Also by the numbers that will turn up at the events that are planned. These will be compared to the event numbers before the making of the website to see if their is a correlation between the success of having the website vs not having it.</p>
 <h2>Target Audience</h2>
-<p>...</p>
+<p>The following site's target audience will be towards high school and young adults.</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
-<p><img src="" alt="Site Flowchart"> </p>
+<p><img src="siteFlowchart.png" alt="Site Flowchart"> </p>
 <h2>GitHub Repository</h2>
 <p><a href="https://github.com/broomy169/CP1406---Assignment-1">CP1406 - Assignment 1</a></p>
 </body>
