added onto target audience

--- a/plan.html
+++ b/plan.html
@@ -19,7 +19,7 @@
 <h2>Success Evaluation</h2>
 <p> Success evaluation of the site will be measured by the amount of people that have signed up via the website. Also by the numbers that will turn up at the events that are planned. These will be compared to the event numbers before the making of the website to see if their is a correlation between the success of having the website vs not having it.</p>
 <h2>Target Audience</h2>
-<p>The following site's target audience will be towards high school and young adults.</p>
+<p>The following site's target audience will be towards high school kids and young adults. We will be doing this by making a site with colours that are simple and based off of the current Cosplay.com website. This is because it already appeals to the younger clientele by sparking an interest in joining into Cosplay. </p>
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="siteFlowchart.png" alt="Site Flowchart"> </p>
 <h2>GitHub Repository</h2>
